--- a/CleanBlog.Web/Views/error.cshtml
+++ b/CleanBlog.Web/Views/error.cshtml
@@ -1,17 +1,12 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<Umbraco.Web.PublishedModels.Error>
+@using CleanBlog.Core.Extensions
 
-    @{
+@{
     Layout = "master.cshtml";
-    }
+}
 
-    @Html.Partial("~/Views/Partials/pageHeader.cshtml")
-    <!-- Post Content -->
-    <article>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-md-10 mx-auto">
-                    <p>Page not found.</p>
-                </div>
-            </div>
-        </div>
-    </article>
+@Html.Partial("~/Views/Partials/pageHeader.cshtml")
+<!-- Post Content -->
+<article>
+    @Html.GetGridHtml(Model, "mainContent", "Clean", fluidImages: true)
+</article>
