Implemented search, using services and custom view pages, image croppers, images lazy loading, cached partialsm, dynamic navigation menu

--- a/CleanBlog.Web/Views/Partials/latestArticles.cshtml
+++ b/CleanBlog.Web/Views/Partials/latestArticles.cshtml
@@ -1,29 +1,18 @@
 ﻿@using CleanBlog.Core.Helpers
-@inherits UmbracoViewPage
+@using CleanBlog.Core.ViewPages
+@inherits CleanBlogViewPage
 
 @{
-    var articleList = Model.Root().Descendants<ArticleList>().FirstOrDefault();
-    var articles = Model.Root().Descendants<Article>()
-                               .Where(x => x.IsVisible())
-                               .OrderByDescending(y => y.ArticleDate);
-    //var articles = Model.Root().Descendants().Where(x => x.ContentType.Alias == "article" && x.IsVisible()).OrderByDescending();
-    var isArticleListPage = articleList.Id == Model.Id;
-    var fallbackPageSize = isArticleListPage ? 10 : 3;
-
-    var pageNumber = QueryStringHelper.GetIntFromQueryString(Request, "page", 1);
-    var pageSize = QueryStringHelper.GetIntFromQueryString(Request, "size", fallbackPageSize);
-
-    var pageOfArticles = articles.Skip((pageNumber - 1) * pageSize).Take(pageSize);
-    var totalItemCount = articles.Count();
-    var pageCount = totalItemCount > 0 ? Math.Ceiling((double)totalItemCount / pageSize) : 1;
+    var resultSet = _articleService.GetLatestArticles(Model, Request);
 }
 
-@if (articles != null && articles.Any())
+@if (resultSet != null && resultSet.Results != null && resultSet.Results.Any())
 {
+    var articles = resultSet.Results.Cast<Article>();
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
-                @foreach (var article in pageOfArticles)
+                @foreach (var article in articles)
                 {
                     <div class="post-preview">
                         <a href="@article.Url">
@@ -50,14 +39,14 @@
                 }
 
             <div id="paging" class="clearfix">
-                @if (isArticleListPage)
+                @if (resultSet.IsArticleListPage)
                 {
-                    if (pageCount > 1)
+                    if (resultSet.PageCount > 1)
                     {
                         <div class="paging-block">
-                            @if (pageNumber > 1)
+                            @if (resultSet.PageNumber > 1)
                             {
-                                <a class="btn btn-primary float-left" href="@($"{articleList.Url}?page={pageNumber - 1}&size={pageSize}")">Prev</a>
+                            <a class="btn btn-primary float-left" href="@($"{resultSet.Url}?page={resultSet.PageNumber - 1}&size={resultSet.PageSize}")">@Umbraco.GetDictionaryValue("Blog.Prev")</a>
                             }
                             else
                             {
@@ -65,12 +54,12 @@
                             }
                         </div>
                         <div class="paging-block text-center">
-                            <span>Page @pageNumber of @pageCount</span>
+                            <span>Page @resultSet.PageNumber of @resultSet.PageCount</span>
                         </div>
                         <div class="paging-block">
-                            @if (pageNumber < pageCount)
+                            @if (resultSet.PageNumber < resultSet.PageCount)
                             {
-                                <a class="btn btn-primary float-right" href="@($"{articleList.Url}?page={pageNumber + 1}&size={pageSize}")">Next</a>
+                            <a class="btn btn-primary float-right" href="@($"{resultSet.Url}?page={resultSet.PageNumber + 1}&size={resultSet.PageSize}")">@Umbraco.GetDictionaryValue("Blog.Next")</a>
                             }
                             else
                             {
@@ -82,7 +71,7 @@
                 }
                 else
                 {
-                    <a class="btn btn-primary float-right" href="@(articleList.Url)">ViewAll</a>
+                    <a class="btn btn-primary float-right" href="@(resultSet.Url)">@Umbraco.GetDictionaryValue("Blog.ViewAll")</a>
                 }
             </div>
             </div>
