--- a/CleanBlog.Web/Views/master.cshtml
+++ b/CleanBlog.Web/Views/master.cshtml
@@ -1,5 +1,7 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 @using ClientDependency.Core.Mvc
+@using Our.Umbraco.EditLink
+
 @{
     Layout = null;
     Html.RequiresCss("/vendor/bootstrap/css/bootstrap.min.css");
@@ -8,6 +10,8 @@
     Html.RequiresCss("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800");
     Html.RequiresCss("/css/clean-blog.min.css");
 
+    Html.RequiresJs("/scripts/lazySizes.min.js", new { async = "async" });
+    Html.RequiresJs("/scripts/ls.unveilhooks .min.js", new { async = "async" });
     Html.RequiresJs("/vendor/jquery/jquery.min.js");
     Html.RequiresJs("/vendor/bootstrap/js/bootstrap.bundle.min.js");
     Html.RequiresJs("/js/clean-blog.min.js");
@@ -24,7 +28,8 @@
     @Html.RenderCssHere()
 </head>
 <body>
-    @Html.Partial("~/Views/Partials/navigation.cshtml")
+    @Html.RenderEditLink(Model)
+    @Html.CachedPartial("~/Views/Partials/navigation.cshtml", Model, 3600, false)
     @RenderBody()
     @Html.Partial("~/Views/Partials/footer.cshtml")
     @Html.RenderJsHere()
